Bug 752149 - [OS X] nsCocoaWindow::ConstrainPosition uses wrong screen in multi-display setup [r=smichaud] Specifically, when loading the position from persisted attributes and the window should open on a 2nd display, it opens on the 1st.